# parasail

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  COPYING  COPYRIGHT  Makefile.am  Makefile.in  README.md  aclocal.m4  align.h  align_debug.h  align_scan_128_16.h  align_scan_128_8.h  align_scan_128_8_debug.h  align_scan_512_32.h  align_striped_128_16.h  align_striped_128_16_debug.h  align_striped_128_8_debug.h  align_wozniak_128_16.h  align_wozniak_128_16_debug.h  align_wozniak_128_8.h  align_wozniak_128_8_debug.h  appveyor.yml  config.h.in  configure  configure.ac  nw_ref.c  nw_scan.c  nw_scan_128_16.c  nw_scan_128_8.c  nw_scan_512_32.c  nw_scan_col.c  nw_scan_col_128_16.c  nw_scan_col_128_8.c  nw_scan_row.c  nw_stats_ref.c  nw_stats_scan.c  nw_stats_scan_128_16.c  nw_stats_scan_128_8.c  (+57 more)
.github/workflows/: autotools-cross-osx.yml  autotools-cross.yml  autotools-osx.yml  autotools.yml  ci.yml  cmake.yml  meson.yml
apps/: README.md  meson.build  parasail_aligner.cpp  parasail_all.cpp  parasail_query.cpp  parasail_stats.c
bindings/python/: parasail.c  parasail.pyx  setup.py  test.py
cmake/: FindAVX2.cmake  FindAltiVec.cmake  FindSSE2.cmake  FindSSE41.cmake  Findxgetbv.cmake  altivec_dummy.c  avx2_dummy.c  config.h.in  neon_dummy.c  parasail.def  sse2_dummy.c  sse41_dummy.c  ssw_dummy.c
contrib/: cpuid.c  cpuid_gen4.c  getMemorySize.c  kseq.h  meson.build  ssw.c  ssw.h
contrib/sais-lite-lcp/: sais.c
contrib/simde/simde/: simde_x86_sse4.2.h
contrib/ssw/: main.c  ssw.c
data/: cd02249_matrix.txt  cd02249_matrix_noquery.txt  cd02249_matrix_safe.txt  multi.fasta  test_64.fasta  test_64r.fasta  test_P0_10.fasta  test_P0_2.fasta  test_P0_3.fasta  test_P0_4.fasta  test_P0_5.fasta  test_case.fasta  test_case2.fasta  test_p29.fasta  test_p59.fasta  test_small_2.fasta
m4/: ax_openmp.m4  ps_cilk.m4  ps_compiler_vendor.m4
parasail/: cpuid.h  function_lookup.h  internal_altivec.h  internal_avx.h  internal_knc.h  internal_neon.h  internal_sse.h  io.h  matrix_lookup.h  memory.h  stats.h
parasail/matrices/: blosum100.h  blosum30.h  blosum35.h  blosum40.h  blosum45.h  blosum50.h  blosum55.h  blosum60.h  blosum62.h  blosum65.h  blosum70.h  blosum75.h  blosum80.h  blosum85.h  blosum90.h  blosum_map.h  blosumn.h  dnafull.h  nuc44.h  pam10.h  pam100.h  pam110.h  pam120.h  pam130.h  pam140.h  pam150.h  pam160.h  pam170.h  pam180.h  pam190.h  pam20.h  pam200.h  pam210.h  pam220.h  pam230.h  pam240.h  pam250.h  pam260.h  pam270.h  pam280.h  (+30 more)
src/: align.h  align_debug.h  align_scan_128_16.h  align_scan_128_16_debug.h  align_scan_128_8.h  align_scan_128_8_debug.h  align_scan_512_32.h  align_scan_512_32_debug.h  align_striped_128_16.h  align_striped_128_16_debug.h  align_striped_128_8.h  align_striped_128_8_debug.h  align_wozniak_128_16.h  align_wozniak_128_16_debug.h  align_wozniak_128_8.h  align_wozniak_128_8_debug.h  cigar.c  cigar_template.c  cigar_template_old.c  cpuid.c  cpuid_arm.c  cpuid_ppc.c  dispatch_profile.c  function_lookup.c  io.c  isastubs.c  matrix_lookup.c  memory.c  memory_altivec.c  memory_avx2.c  memory_knc.c  memory_neon.c  memory_sse.c  memory_sse2.c  memory_sse41.c  meson.build  nw.c  nw_banded.c  nw_diag_altivec_128_16.c  nw_diag_altivec_128_32.c  (+648 more)
src/blosum/: blosum40.h  blosum45.h  blosum50.h  blosum62.h  blosum75.h  blosum80.h  blosum90.h  blosum_map.h
tests/: blosum_lookup.h  func_verify.h  func_verify_rowcols.h  func_verify_tables.h  func_verify_traces.h  function_lookup.h  ssw_vs_pssw.c  stats.h  test_12.c  test_64.c  test_69.c  test_align.c  test_align_debug.c  test_align_stats.c  test_align_table.c  test_altivec.c  test_basic.c  test_gcups.c  test_io.c  test_isa.c  test_matrix.c  test_openmp.c  test_openmp_sais.cpp  test_p29.c  test_p59.c  test_p59.h  test_parser.c  test_pssm.c  test_query.c  test_scatter.c  test_ssw.cpp  test_sw_dispatch.c  test_verify.c  test_verify.test  test_verify_cigars.c  test_verify_rowcols.c  test_verify_tables.c  test_verify_traces.c  timer.h  timer_real.h  (+1 more)
travis/: build-docker.sh
util/: codegen.py  diff_all.sh  dispatch_profile.py  dispatcher.py  func_group_rowcols.py  func_group_tables.py  func_group_traces.py  func_groups.py  funcs.py  isa.py  isastubs.py  makedef.py  memory.py  names.py  pygen.py  satcheck.py  tester.py
util/matrices/: codegen.py
util/templates/: avx512_nw_diag.c  avx512_nw_scan.c  avx512_nw_stats_diag.c  avx512_nw_stats_scan.c  avx512_nw_stats_striped.c  avx512_nw_striped.c  avx512_sg_diag.c  avx512_sg_diag_8.c  avx512_sg_scan.c  avx512_sg_stats_diag.c  avx512_sg_stats_scan.c  avx512_sg_stats_striped.c  avx512_sg_striped.c  avx512_sw_diag.c  avx512_sw_diag_8.c  avx512_sw_scan.c  avx512_sw_stats_diag.c  avx512_sw_stats_diag_8.c  avx512_sw_stats_scan.c  avx512_sw_stats_striped.c  avx512_sw_stats_striped_bias.c  avx512_sw_striped.c  avx512_sw_striped_bias.c  nw_diag.c  nw_scan.c  nw_stats_diag.c  nw_stats_scan.c  nw_stats_striped.c  nw_striped.c  nw_trace_diag.c  nw_trace_scan.c  nw_trace_striped.c  sg_diag.c  sg_diag_8.c  sg_scan.c  sg_stats_diag.c  sg_stats_scan.c  sg_stats_striped.c  sg_striped.c  sg_trace_diag.c  (+17 more)
